# Avito_RAG

./: README.md  pyproject.toml
catboost_info/: catboost_training.json  time_left.tsv
data/ready/: answer.csv  article_embeddings_e5.npy  bm25_calib.f  bm25_test.f  body_embeddings_e5.npy  calibration_targets.f  queries_corrected.f  queries_raw.f  query_embeddings_e5.npy  test_ids_mapping.json  title_embeddings_e5.npy
src/: config.py
src/embeddings/: embedder.py
src/evaluation/: metrics.py
src/preprocessing/: articles.py  queries.py
src/reranking/: run_ltr.py  run_ltr_dense.py  run_ltr_dense_v2.py
src/retrieval/: bm25.py
